fix: spacing

--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -131,3 +131,10 @@
         max-height: 400px;
     }
 }
+
+
+@media (min-width:800px) {
+    .mobileNav {
+        display: none;
+    }
+}
