--- a/src/components/ReservationBar/style.scss
+++ b/src/components/ReservationBar/style.scss
@@ -123,15 +123,12 @@
     }
 }
 
-.inHome {
-    margin-top: -100px;
-}
 
-@media (max-width:800px) {
+// @media (max-width:800px) {
 
-    .ReservationBar {
-        margin-top: -100px !important;
-    }
+//     .ReservationBar {
+//         margin-top: -100px !important;
+//     }
 
 
-}
+// }
