--- a/src/pages/Destination/style.scss
+++ b/src/pages/Destination/style.scss
@@ -4,6 +4,11 @@
         gap: 30px;
         grid-template-columns: repeat(3, 1fr);
         padding: 3em 0;
+
+        @media (max-width:800px) {
+       grid-template-columns: 1fr;
+
+   }
     }
 
     .btns {
